    + Ajout de tooltips pour la partie gestion des programmes
    + Inversion des deux boutons 'fin' et 'configurer une autre prise' du wizard
    + Ajout d'une option de configuration permettant d'activer ou non le selection du capteur pour la régulation
    + Correction d'un bug sur le zoom des puissances dans les logs

-- Yann Genevois <yann.genevois@gmail.com>  Mon May  6 12:26:10 CEST 2013


Cultibox (1.1.18) precise; urgency=low
    + Correction pour l'affichage du calendrier lunaire...

-- Yann Genevois <yann.genevois@gmail.com>  Tue Apr 30 19:27:18 CEST 2013


Cultibox (1.1.17) precise; urgency=low
    + Correction du calendrier: les evènements sur deux mois fonctionnent à nouveau
    + Les accents dans les fichiers calc sont maintenant bien pris en compte
    + Ajout d'un champ color possible dans les fichiers xml pour choisir la couleur de ses evènements
    + Ajout d'un champ icon dans les entry du fichier xml pour ajouter une icone dans le titre (exemple calendrier lunaire)
    + Correctif pour l'affichage des accents dans highchart pour mac: passage par HTML

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 21:45:39 CEST 2013


Cultibox (1.1.16) precise; urgency=low
    + Correction du calendrier pour windows: on ne regarde pas les repertoire . et .. pour la recherche de fichiers xml 

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 16:42:25 CEST 2013


Cultibox (1.1.15) precise; urgency=low
    + Ajout des fichiers de langues pour la datepicker
    + Modificaition de localhost en 127.0.0.1 dans le fichier configuration.php de joomla

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 14:32:31 CEST 2013


Cultibox (1.1.14) precise; urgency=low
    + Correction de la connxion PDO: passage de localhost à 127.0.0.1 (problème de timeout due au reverse DNS IPV6)
    + Correction des cases avec plusieurs valeurs qui ne marchaient pas
    + Déplacement du boutton "resetzoom" des logs au centre en bas du graphe